add . at \clean_code

--- a/clean_code/brachTech.ipynb
+++ b/clean_code/brachTech.ipynb
@@ -13,6 +13,9 @@
     "git remote -v\n",
     "git push origin cleancode1\n",
     "git checkout master //잊지말고 다시 마스터로 돌아가기\n",
+    "\n",
+    "git config --global core.autocrlf true //crlf->lf\n",
+    "git push -f origin cleancode1 //강제 push\n",
     "\"\"\""
    ]
   },
