--- a/clean_code/brachTech.ipynb
+++ b/clean_code/brachTech.ipynb
@@ -14,8 +14,8 @@
     "git push origin cleancode1\n",
     "git checkout master //잊지말고 다시 마스터로 돌아가기\n",
     "\n",
-    "git config --global core.autocrlf true //crlf->lf\n",
-    "git push -f origin cleancode1 //강제 push\n",
+    "git config --global core.autocrlf true //crlf->lf 이거 안해주면 github사이트에서 파일이 안보이는 오류가 생기는 듯 함\n",
+    "git push -f origin cleancode1 //강제 push -> 깃헙에는 있는데 여기는 없으면 pulㄴl했다가 등등 해야한다는데 그런거 신경 안쓰고 그냥 올리고싶을때\n",
     "\"\"\""
    ]
   },
