Your local changes to the following files would be overwritten by checkout

--- a/clean_code/brachTech.ipynb
+++ b/clean_code/brachTech.ipynb
@@ -10,7 +10,7 @@
     "git checkout cleancode1\n",
     "git add 폴더이름 //// git add 파일이름.파일확장자\n",
     "git commit -m \"커밋내용\"\n",
-    "git remote -v\n",
+    "//git remote -v //폴더 올릴때만\n",
     "git push origin cleancode1\n",
     "git checkout master //잊지말고 다시 마스터로 돌아가기\n",
     "\n",
